syntax = "proto3";

package lightcontrol;

// service definitions as per Project Proposal


service LightControlService  {
    //lights on/off
    rpc ControlLight(LightControlRequest) returns (LightControlResponse) {}

    //query lights' status
    rpc GetLightStatus (LightStatusRequest) returns (LightStatusResponse) {}
}
